--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Bespoke Post</title>
+	<title>Wash Post</title>
 	<link rel="stylesheet" href="./styles.css">
 	<script src="jquery-1.11.2.min.js"></script>
 	<script src="./scripts.js"></script>
 </head>
 <body>
 <div id="outer-box">
-	<span class="header-text"><span class="bold">BESPOKE</span>POST</span>
+	<span class="header-text"><span class="bold">Wash</span>POST</span>
 	<div class="top-img-container"></div>
 	<div class="main-content">
 		<div class="column-left">
@@ -41,13 +41,13 @@
 			</div>
 			<div class="body-content">
 				<p class="content-title"><span class="bold">DOPP KIT,</span> <span class="co-label">BLUE CLAW CO.</span></p>
-				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Bespoke, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
+				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Wash, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
 				<p class="content-title"><span class="bold">DOPP KIT,</span> <span class="co-label">BLUE CLAW CO.</span></p>
-				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Bespoke, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
+				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Wash, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
 				<p class="content-title"><span class="bold">DOPP KIT,</span> <span class="co-label">BLUE CLAW CO.</span></p>
-				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Bespoke, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
+				<p class="content">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Wash, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p>
 			</div>
-			<div class="img-1"><p class="image-text-1">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Bespoke, each bag was painstakingly handcrafted in the good old US of A.</p></div>
+			<div class="img-1"><p class="image-text-1">Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Wash, each bag was painstakingly handcrafted in the good old US of A.</p></div>
 			<div class="img-2"><p class="image-text-2">The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland.</p></div>
 			<div class="img-3"><p class="image-text-3">While the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p></div>
 			<div class="button-group">
@@ -58,7 +58,7 @@
 				<input type="radio" name="button-group" id="button-3" class="inactive">
 					<label for="button-3">DOLOR SIT AMET</label>
 			</div>
-			<div class="product-description"><p>Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Bespoke, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p></div>
+			<div class="product-description"><p>Blue Claw's Dopp bag is as resistant to blending in as it is to wearing down. Designed exclusively for Wash, each bag was painstakingly handcrafted in the good old US of A. The waterproof exterior is crafted from heavy, 15oz waxed canvas sourced from family mills in the heartland, while the full-grain leather handle and pull tab, bronze rivets and zipper, and signature blue ballistic nylon lining boast a rugged simplicity. Americana at its best.</p></div>
 		</div>
 		<div class="column-right">
 			<div class="float-box">
@@ -67,7 +67,7 @@
 				<p>Join the Club for exclusive pric-<br/>ing. See a new box each month and skip if it’s not for you.</p>
 				<button class="join-club"><p>JOIN THE CLUB + GET REFRESH</p></button>
 				<p>Want Refresh without joining?<br/>
-				<a href="https://www.bespokepost.com/cart/choose_box">Quick Buy for $55.</a></p>
+				<a href="https://www.washpost.com/cart/choose_box">Quick Buy for $55.</a></p>
 			</div>
 		</div>
 	</div>
